# physics_engine

./: .gitignore  CMakeLists.txt  Makefile
cmake/: lib
cmake/config/exception/: utils.json  woof.json
cmake/script/: const.py  generate_exception_header.py
include/: define.hpp  error.hpp  object.hpp  stack.hpp  string.hpp  woof.hpp  write.hpp
include/utils/: Utils.hpp  utils.hpp
include/utils/attribute/: Attribute.hpp  c++14.hpp  c++17.hpp  c++20.hpp  fallback.hpp
include/utils/exception/: AException.hpp  ExceptionDefine.hpp  IException.hpp  generated_exception_header.hpp
include/utils/exception/basic/: ErrorException.hpp  NoneException.hpp  WarningException.hpp
include/utils/exception/custom/: CustomException.hpp
include/utils/write/: ANSI.hpp  Char.hpp  Color.hpp  OutputEdition.hpp  Style.hpp  WriteDefine.hpp  WriteMacro.hpp  format.hpp
include/woof/: DynamicLibrary.hpp  Engine.hpp  Vector.hpp  engine.hpp
include/woof/factory/: AFactory.hpp  GraphicFactory.hpp  IFactory.hpp  ObjectFactory.hpp  RenderFactory.hpp
include/woof/graphic/: AGraphic.hpp  IGraphic.hpp  OpenGLGraphic.hpp  SDLGraphic.hpp  VulkanGraphic.hpp
include/woof/object/: AObject.hpp  ActorObject.hpp  IObject.hpp  ObjectObject.hpp  PropObject.hpp  ShapeDescriptor.hpp
include/woof/render/: ARender.hpp  IRender.hpp  OpenGLRender.hpp  SDLRender.hpp  VulkanRender.hpp
lib/my/: Makefile
lib/my/engine/: collisions.cpp  compute.cpp  constructor.cpp  destructor.cpp  draw.cpp  object_handling.cpp  physics.cpp  simulate.cpp  stack.cpp  thread.cpp  update.cpp  window.cpp
lib/my/error/: error_custom.cpp  error_dispatch.cpp  error_print.cpp  error_prog.cpp  error_system.cpp
lib/my/string/retrive/: strlen.cpp
lib/my/write/: putchar.cpp  putnbr.cpp  putnbr_base.cpp  putstr.cpp
lib/my/write/edit_ouput/: reset.cpp
lib/my/write/edit_ouput/color/: back_color.cpp  back_color_rgb.cpp  color.cpp  color_rgb.cpp
lib/my/write/edit_ouput/style/: strong.cpp
src/: main.cpp
src/woof/: DynamicLibrary.cpp  Engine.cpp
src/woof/engine/: run.cpp
src/woof/factory/: GraphicFactory.cpp  ObjectFactory.cpp  RenderFactory.cpp
src/woof/graphic/: AGraphic.cpp  OpenGLGraphic.cpp  SDLGraphic.cpp  VulkanGraphic.cpp
src/woof/object/: ShapeDescriptor.cpp
src/woof/render/: ARender.cpp  OpenGLRender.cpp  SDLRender.cpp  VulkanRender.cpp
